# streaming-pipelines

./: .gitignore
.circleci/: config.yml
CitibikeApiProducer/src/main/resources/: application-station-san-francisco.properties  application-station-status.properties
Monitoring/: main.py  pyproject.toml
StationConsumer/: build.sbt
StationConsumer/src/main/scala/com/tw/apps/: DataValidator.scala  StationApp.scala  StationData.scala  StationDataTransformation.scala
StationConsumer/src/test/resources/: test-data-mart.csv
StationConsumer/src/test/scala/com/tw/apps/: DataValidatorTest.scala  StationDataTransformationTest.scala
StationTransformerNYC/: Dockerfile
docker/: docker-compose.yml
hdfs/: seed.sh
sbin/: deploy.sh  run.sh  upgrade.sh  upload.sh
zookeeper/: Dockerfile  seed.sh
